apps/vps/xray/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xray
  namespace: xray
spec:
  selector:
    app: xray
  ports:
    - name: xhttp
      port: 2001
      targetPort: xhttp
